--- a/appMammaMia/templates/index.html
+++ b/appMammaMia/templates/index.html
@@ -47,7 +47,7 @@
 
     <!-- Pizza Base Section -->
     <div id="masas" class="container-fluid has-bg-overlay-gray text-center text-light has-height-lg middle-items">
-        <h2 class="section-title">{% trans "NUESTRAS MASAS" " %}</h2>
+        <h2 class="section-title">{% trans "NUESTRAS MASAS" %}</h2>
     </div>
     <div class="gallary row">
         {%for masa in masas%}
