--- a/static/assets/css/base.css
+++ b/static/assets/css/base.css
@@ -40,3 +40,9 @@
 .language-selector select:focus {
     outline: none;
 }
+
+#error-message {
+    color: red;
+    font-size: 0.9rem;
+    margin-top: 10px;
+}
