--- a/static/assets/css/pizzas.css
+++ b/static/assets/css/pizzas.css
@@ -8,7 +8,7 @@
     border-radius: 8px;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
     margin-bottom: 20px;
-    overflow: hidden;
+    padding: 15px;
     transition: transform 0.3s ease;
 }
 
@@ -48,6 +48,8 @@
 .pizza-info ul li {
     color: #777;
 }
+
+
 
 
 
