--- a/appMammaMia/templates/base.html
+++ b/appMammaMia/templates/base.html
@@ -74,7 +74,7 @@
         <div class="container-fluid bg-dark text-light has-height-md middle-items border-top text-center wow fadeIn">
             <div class="row">
                 <div class="col-sm-4">
-                    <h3>VISITANOS</h3>
+                    <h3>{% trans "VISITANOS" %}</h3>
                     <p class="text-muted">{% trans "Lunes ~ Jueves (12:30-22:00)" %}</p>
                     <p class="text-muted">{% trans "Viernes ~ Sabado (12:30-00:00)" %}</p>
                 </div>
