--- a/appMammaMia/templates/base.html
+++ b/appMammaMia/templates/base.html
@@ -2,7 +2,7 @@
 {% load static %}
 {% load i18n %}
 
-<html lang="es">
+<html lang="{{ LANGUAGE_CODE }}">
     <head title="MammaMia">
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
