--- a/appMammaMia/templates/base.html
+++ b/appMammaMia/templates/base.html
@@ -58,7 +58,7 @@
                         <a class="navbar-link" href="/index.html#book-table">{% trans "Reservar mesa" %}</a>
                     </li>
                     <!-- Selector de idioma como botones -->
-                    <li class="language-selector ml-auto">
+                    <li class="nav-item">
                         <a href="{% url 'set_language' %}?language=es" class="navbar-link">ES</a>
                         <a href="{% url 'set_language' %}?language=en" class="navbar-link">EN</a>
                     </li>
