--- a/appMammaMia/templates/descripcion_de_pizza.html
+++ b/appMammaMia/templates/descripcion_de_pizza.html
@@ -12,7 +12,7 @@
     <div class="pizza-card" style="width: 65%; margin:auto;">
         
         <div class="pizza-img">
-            <img src="{{ pizza.imagen_url }}" alt="{{ pizza.nombre }}" class="img-fluid">
+            <img src="{{ pizza.imagen.url }}" alt="{{ pizza.nombre }}" class="img-fluid">
         </div>
     
         <div class="pizza-info">
