--- a/appMammaMia/templates/ingrediente.html
+++ b/appMammaMia/templates/ingrediente.html
@@ -45,7 +45,7 @@
                 <div class="pizza-card">
                     
                     <div class="pizza-img">
-                        <img src="{{ pizza.imagen_url }}" alt="{{ pizza.nombre }}" class="img-fluid">
+                        <img src="{{ pizza.imagen.url }}" alt="{{ pizza.nombre }}" class="img-fluid">
                     </div>
 
                     <div class="pizza-info">
