--- a/appMammaMia/templates/index.html
+++ b/appMammaMia/templates/index.html
@@ -4,6 +4,9 @@
 {% block title %}
     Mamma mia! | Pizzas auténticas
 {% endblock %}
+{%block extra_head%}
+<link rel="stylesheet" href="{% static 'assets/css/pizzas.css' %}">
+{%endblock%}
 
 {% block content %}
 <!-- Header -->
@@ -46,18 +49,19 @@
 </div>
 
 <!-- Selector de masas dinámico -->
-<div>
+<div class="gallery row">
     <label for="masa-select">Selecciona un tipo de masa:</label>
-    <select id="masa-select">
+    <select id="masa-select" class="form-control">
         <option value="">-- Selecciona una masa --</option>
         {% for masa in masas %}
-        <option value="{{ masa.id }}">{{ masa.nombre }}</option>
+            <option value="{{ masa.id }}">{{ masa.nombre }}</option>
         {% endfor %}
     </select>
 </div>
 
+
 <div id="pizza-list">
-    <p>Selecciona un tipo de masa para ver las pizzas disponibles.</p>
+    
 </div>
 
 <!-- Reservar mesa -->
@@ -84,7 +88,7 @@
     </form>
 </div>
 
-<!-- Secciones restantes -->
+<!-- Secciones ingredientes -->
 <div id="ingredientes" class="container-fluid has-bg-overlay-gray text-center text-light has-height-lg middle-items">
     <h2 class="section-title">{% trans "NUESTROS INGREDIENTES" %}</h2>
 </div>
