--- a/appMammaMia/templates/index.html
+++ b/appMammaMia/templates/index.html
@@ -48,20 +48,38 @@
     {% endfor %}
 </div>
 
+<!-- Pizza Base Section -->
+<div id="masas" class="container-fluid has-bg-overlay-gray text-center text-light has-height-lg middle-items">
+    <h2 class="section-title">{% trans "NUESTRAS MASAS" %}</h2>
+</div>
+<div class="gallary row">
+    {%for masa in masas%}
+        <div class="col-sm-6 col-lg-3 gallary-item wow fadeIn">
+            <img src="{{ masa.imagen.url }}" alt="Foto de {{masa.nombre}}" class="gallary-img">
+            <a href="{% url 'pizzas' masa.nombre|slugify %}" class="gallary-overlay">
+                <span class="h3 white">Masa {{masa.nombre}}</span>
+            </a>
+        </div>
+    {%endfor%}
+</div>
+
 <!-- Selector de masas dinámico -->
-<div class="gallery row">
-    <label for="masa-select">Selecciona un tipo de masa:</label>
-    <select id="masa-select" class="form-control">
-        <option value="">-- Selecciona una masa --</option>
-        {% for masa in masas %}
-            <option value="{{ masa.id }}">{{ masa.nombre }}</option>
-        {% endfor %}
-    </select>
+ <br><br>
+
+ <div class="container text-center my-4">
+    <div class="d-inline-block">
+        <label for="masa-select" class="form-label">Filtrar pizzas por masa:</label>
+        <select id="masa-select" class="form-control">
+            <option value="">-- Selecciona una masa --</option>
+            {% for masa in masas %}
+                <option value="{{ masa.id }}">{{ masa.nombre }}</option>
+            {% endfor %}
+        </select>
+    </div>
 </div>
 
 
-<div id="pizza-list">
-    
+<div id="pizza-list"> 
 </div>
 
 <!-- Reservar mesa -->
