--- a/staticfiles/assets/css/base.css
+++ b/staticfiles/assets/css/base.css
@@ -4,3 +4,26 @@
     font-size: 16px;
     padding-left: 20px;
 }
+
+.fondo-carta {
+    background-color: #1f252bb9;
+    padding: 30px;
+    margin: auto;
+    width: 80%;
+    border-radius: 15px;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+}
+
+.h1-center{
+    text-align: center;
+}
+
+.h2-center{
+    text-align: center;
+}
+
+#error-message {
+    color: red;
+    font-size: 0.9rem;
+    margin-top: 10px;
+}
