--- a/appMammaMia/templates/base.html
+++ b/appMammaMia/templates/base.html
@@ -2,7 +2,7 @@
 {% load static %}
 {% load i18n %}
 
-<html lang="es">
+<html lang="{{ LANGUAGE_CODE }}">
     <head title="MammaMia">
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -58,7 +58,7 @@
                         <a class="navbar-link" href="/index.html#book-table">{% trans "Reservar mesa" %}</a>
                     </li>
                     <!-- Selector de idioma como botones -->
-                    <li class="language-selector ml-auto">
+                    <li class="navbar-link">
                         <a href="{% url 'set_language' %}?language=es" class="navbar-link">ES</a>
                         <a href="{% url 'set_language' %}?language=en" class="navbar-link">EN</a>
                     </li>
@@ -74,9 +74,10 @@
         <div class="container-fluid bg-dark text-light has-height-md middle-items border-top text-center wow fadeIn">
             <div class="row">
                 <div class="col-sm-4">
-                    <h3>VISITANOS</h3>
+                    <h3>{% trans "VISITANOS" %}</h3>
                     <p class="text-muted">{% trans "Lunes ~ Jueves (12:30-22:00)" %}</p>
                     <p class="text-muted">{% trans "Viernes ~ Sabado (12:30-00:00)" %}</p>
+                    <p>Idioma actual: {{ request.LANGUAGE_CODE }}</p>
                 </div>
                 <div class="col-sm-4">
                     <h3>{% trans "LLAMANOS" %}</h3>
